<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:id="@+id/serverAddress"
        android:capitalize="words"
        android:defaultValue="@string/key_server_value"
        android:inputType="textUri"
        android:key="@string/key_server_address"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/key_server_address_title" />

    <EditTextPreference
        android:id="@+id/serverFrequency"
        android:capitalize="words"
        android:defaultValue="@string/key_frequency_value"
        android:inputType="number"
        android:key="@string/key_frequency"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/key_frequency_title" />

</PreferenceScreen>
